# xgrid

./: .gitignore  README
firmware/: update-xboot.sh
firmware/xboot/conf/: node.conf.mk  x128a3.conf.mk
firmware/xmega/: Makefile  README  board.h  i2c.h  main.cpp  main.h  xgrid.cpp  xgrid.h  xgrid_types.h
xgrid-manager/: README  configure.ac
xgrid-manager/src/: Makefile.am  XGInterface.cpp  XGInterface.h  XGPacket.cpp  XGPacket.h  XGPacketBuilder.cpp  XGPacketBuilder.h  XGridManager.cpp  XGridManager.h  xgrid_manager_gtk.cpp
