bin_PROGRAMS = xgrid-manager-gtk

xgrid_manager_gtk_SOURCES = xgrid_manager_gtk.cpp XGridManager.cpp PortConfig.cpp SerialInterface.cpp alphanum.cpp XGPacket.cpp XGInterface.cpp XGPacketBuilder.cpp
xgrid_manager_gtk_CXXFLAGS = $(DEPS_CFLAGS)
xgrid_manager_gtk_LDADD = $(DEPS_LIBS)

#xmldir = $(datadir)
#xml_DATA = 

